# settrie

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: check.yml  coverage.yml  lints.yml  test.yml
src/: lib.rs  settrie.rs
