[package]
name = "settrie"
version = "0.1.0"
edition = "2018"
authors = ["Qiang Liu <qiangliu135@gmail.com>"]
repository = "https://github.com/miochris/settrie"
description = "Fast subset and superset queries"
keywords = ["settrie", "set-trie", "superset", "subset"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
